--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="https://formspree.io/f/xpzvqbjn">
 				<input type="text" name="guestName" id="guestName" placeholder="Name">
-				<input type="submit" value="I’ll be there">
+				<input type="submit" value="Ill be there">
 			</form>
 
 		<!-- Footer -->
