--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 
 		<!-- Signup Form -->
 			<form id="signup-form" method="post" action="https://formspree.io/f/xpzvqbjn">
-				<input type="text" name="guestName" id="guestName" placeholder="Name">
-				<input type="submit" value="Ill be there">
+				<input type="text" name="guestName" id="guestName" placeholder="Name" />
+				<input type="submit" value="I’ll be there" />
+				<input type="hidden" name="_next" value="https://www.backwellalumni.uk/mail/done" />
 			</form>
 
 		<!-- Footer -->
