--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="icon" href="favicon.ico">
+		<meta name="description" content="You’re invited to Bar 1999">
+		<meta name="author" content="Bar 1999">
+		<meta property="og:title" content="The Pisces Party">
+		<meta property="og:description" content="You’re invited to Bar 1999">
+		<meta property="og:url" content="https://bar1999.co.uk">
+		<meta property="og:locale" content="en_GB">
+		<meta property="og:image" content="https://bar1999.co.uk/structured_data/open_graph_logo.png">
+		<meta property="og:type" content="website">
+		<meta property="og:site_name" content="The Pisces Party">
+		<link rel="canonical" href="https://bar1999.co.uk">
+		<!-- <link rel="mask-icon" href="structured_data/safari_pinned_tab.svg" color="#f05097"> -->
+		<meta name="apple-mobile-web-app-title" content="Bar 1999">
+		<meta name="application-name" content="Bar 1999">
 	</head>
 	<body class="is-preload">
 
