--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta property="og:description" content="You’re invited to Bar 1999">
 		<meta property="og:url" content="https://bar1999.co.uk">
 		<meta property="og:locale" content="en_GB">
-		<meta property="og:image" content="https://bar1999.co.uk/structured_data/open_graph_logo.png">
+		<meta property="og:image" content="https://bar1999.co.uk/open_graph_logo.jpg">
 		<meta property="og:type" content="website">
 		<meta property="og:site_name" content="The Pisces Party">
 		<link rel="canonical" href="https://bar1999.co.uk">
