--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 		<link rel="icon" href="favicon.ico">
 		<meta name="description" content="You’re invited to Bar 1999">
 		<meta name="author" content="Bar 1999">
-		<meta property="og:title" content="The Pisces Party">
-		<meta property="og:description" content="You’re invited to Bar 1999">
+		<meta property="og:title" content="You’re invited to Bar 1999">
+		<meta property="og:description" content="The Pisces Party">
 		<meta property="og:url" content="https://bar1999.co.uk">
 		<meta property="og:locale" content="en_GB">
 		<meta property="og:image" content="https://bar1999.co.uk/open_graph_logo.jpg">
 		<meta property="og:type" content="website">
-		<meta property="og:site_name" content="The Pisces Party">
+		<meta property="og:site_name" content="Bar 1999">
 		<link rel="canonical" href="https://bar1999.co.uk">
 		<!-- <link rel="mask-icon" href="structured_data/safari_pinned_tab.svg" color="#f05097"> -->
 		<meta name="apple-mobile-web-app-title" content="Bar 1999">
