Hotel options replace form

--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 				Saturday 2 March, 6pm to late</p>
 			</header>
 
+			<form action="accomdation_options.pdf">
+				<input type="submit" value="View hotel recommendations">
+			</form>
+
 		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="https://formspree.io/f/xpzvqbjn">
+			<!--<form id="signup-form" method="post" action="https://formspree.io/f/xpzvqbjn">
 				<input type="text" name="guestName" id="guestName" placeholder="Name" />
 				<input type="submit" value="I’ll be there" />
-			</form>
+			</form>-->
 
 		<!-- Footer -->
 			<footer id="footer">
